# outlier-bench

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: digits_iforest.yaml  digits_lof.yaml  digits_ocsvm.yaml  sweep_quick.yaml  synthetic_iforest.yaml  synthetic_lof.yaml  synthetic_lof_scattered.yaml  synthetic_ocsvm.yaml  synthetic_zscore.yaml
src/outlier_bench/: cli.py  config.py  registry.py  sweep_config.py
src/outlier_bench/datasets/: digits_oneclass.py  synthetic.py
src/outlier_bench/eval/: metrics.py  runner.py  sweep.py  thresholding.py
src/outlier_bench/models/: isolation_forest.py  lof.py  ocsvm.py  robust_zscore.py
src/outlier_bench/reporting/: leaderboard.py
tests/: test_pipeline_smoke.py
